# f3dasm

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  =1.2.0  CITATION.cff  CONTRIBUTING.md  F3DAS-ML-example.ipynb  LICENSE  MANIFEST.in  ML_utils.py  Makefile  README-agentic.md  README.md  README.rst  STEP1_F3DAS_supercompressible_mm.m  STEP2a_ML_Classification.py  STEP2b_ML_Regression.py  VERSION  clean_dir.bat  example_2d_rve.py  example_Bertoldi.py  example_TRAC_boom.py  example_TRAC_boom_geometry.py  example_TRAC_boom_model.py  example_abaqus_material.py  example_abaqus_step.py  example_composites.ipynb  example_material.py  example_matrix_square_root.py  example_supercompressible.ipynb  example_supercompressible_DoE_3d.py  example_supercompressible_DoE_3d_run.py  example_supercompressible_DoE_7d.py  example_supercompressible_ML_regression.py  example_supercompressible_clean_dir.py  example_supercompressible_clean_dir_abq.py  example_supercompressible_fnc.ipynb  example_supercompressible_geometry.py  (+32 more)
.conda/: meta.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  code-fix.yml  documentation.yml  feature-request.yml  questions-help-support.yml
.github/workflows/: build_and_publish.yml  build_docs.yml  crw.yml  docs.yml  docs2.yml  draft-pdf.yml  pr_to_main.yml  pr_to_pr.yml  pull_request.yml  push_to_main.yml  release.yaml  release.yml  tests.yml
.spyproject/config/: workspace.ini
F3DASM-2/: .gitignore  requirements.txt
F3DASM-2/doe_modules/: numpy.py  salib.py
F3DASM-2/fenics_SolidMechanics-main/: .gitignore  util.py
F3DASM-2/ml_modules/: torch.py
F3DASM-2/sim_modules/: fenics.py
F3DASM-2/src/: data.py  doe.py  sim.py
abaqus_modules/: example_overvelde.py  supercompressible_fnc.py
abaqus_scripts/: example_overvelde.py  supercompressible_lin_buckle_pp.py
docs/: .citation.md  Makefile  README.md  api.md  bmcoptimizer.md  concepts.md  conf.py  defaults.md  gettingstarted.rst  gettingstarted_old.rst  index.md  index.rst  installation.md  installation.rst  license.md  make.bat  overview.md  readme.rst  refs.bib  requirements.txt  space.rst  studies.md  usage.rst
docs/_static/: theme_overrides.css
docs/agentic/: class_diagram.dot
docs/api/: datageneration.md  defaults.md  design.md  experimentdata.md  hydra_tools.md  pipeline.md
docs/base/: data.rst  design.rst  function.rst  metaoptimizers.rst  optimization.rst  sampling.rst  simulation.rst
docs/capabilities/: algorithms.rst  functions.rst  samplers.rst  space.rst
docs/examples/: benchmarkoptimization.rst
docs/implementations/: algorithms.rst  samplers.rst
docs/notebooks/: quickstart.ipynb
docs/source/: basic_supercompressible.rst  basic_supercompressible_advanced.rst  conf.py  data-classes.rst  f3dasm.base.rst  f3dasm.config.rst  f3dasm.examples.rst  f3dasm.functions.adapters.rst  f3dasm.functions.rst  f3dasm.machinelearning.adapters.rst  f3dasm.machinelearning.rst  f3dasm.optimization.adapters.rst  f3dasm.optimization.rst  f3dasm.regression.adapters.rst  f3dasm.regression.kernels.rst  f3dasm.regression.rst  f3dasm.rst  f3dasm.sampling.rst  f3dasm.simulation.abaqus.rst  f3dasm.simulation.rst  f3dasm.src.rst  index.rst  installation.rst  license.rst  modules.rst  readme.rst  references.rst  refs.bib  sample.rst  sample.sampling.rst  sg_execution_times.rst
docs/specs/: 2026-05-19-config-budget-ollama-design.md  2026-05-19-config-budget-ollama-plan.md  architecture.md
docs/uml/: UML_overview.drawio  ~$UML_overview.drawio.dtmp
docs_old/: Makefile  README.md
docs_old/source/: api.rst  readme.rst
examples/: README.rst  ex_defing_a_doe.py  ex_extending_sampling.py  ex_modifying_a_doe.py  ex_rve2D.py  ex_rve3D.py  ex_sampling_doe_vars.py  example.py
examples/001_domain/: 001_domain_creation.py  002_own_sampler.py  003_builtin_sampler.py  README.rst
examples/002_experimentdata/: 001_experimentdata.py  002_experimentdata_storing.py  README.rst
examples/003_datageneration/: 001_own_datagenerator.py  002_builtin_benchmarkfunctions.py  003_storing.py  README.rst
examples/004_optimization/: 001_builtin_optimizers.py  README.rst
examples/005_workflow/: 001_cluster_computing.py  README.rst
examples/006_hydra/: 001_hydra_usage.py  002_cluster_hydra.py  README.rst  config.yaml  config_from_file.yaml  config_from_sampling.yaml
examples/composites_OH/: example_composites.ipynb
experiments/: simple_mfbo_example.py  simple_mtask_example.py
f3das/: post_processing.py
f3dasm/: __init__.py  core.py  design_of_experiments.py  main.py  post_processing.py  pyproject.toml  run_abaqus.py  run_optimization.py
gmshModel/: __init__.py
notebooks/: Midterm_assignment_Q5.ipynb  applyalongaxes.ipynb  asdf.ipynb  augmentation.ipynb  capstone_bug.ipynb  classification.ipynb  coding.ipynb  config.ipynb  config.py  config.yaml  continuous.txt  convex.txt  differentiable.txt  doc_generating.ipynb  example.ipynb  functions.ipynb  get_info.ipynb  global_min.ipynb  gradient.ipynb  hydra_make_design.py  hyperparameters.ipynb  hypothesis.ipynb  img_generating.ipynb  imports.ipynb  linear_regressor.ipynb  margin_of_victory.ipynb  metaoptimizer.ipynb  mnist_dataset.ipynb  multimodal.txt  new_grad.ipynb  nlopt.ipynb  notebook.ipynb  obj_funcs.py  obj_models.py  obj_utilities.py  offset.ipynb  opt_tests.ipynb  opts.txt  pandas.ipynb  passthroughmodel.ipynb  (+15 more)
paper/: paper.bib  paper.md
requirements/: build.txt  core.txt  machinelearning.txt  optimization.txt  sampling.txt
sample/: core.py
studies/: README.md  simple_mtask_example.py  simple_sfbo_example.py  simple_sogpr_example.py
tests/: conftest.py  context.py  example_material.py  fixtures.py  readme.md  requirements.txt  set_path.py  test_abaqus.py  test_advanced.py  test_basic.py  test_core.py  test_data.py  test_designofexperiments.py  test_errors.py  test_gmsh.py  test_hydra_utils.py  test_hypothesis.py  test_mpi_utils.py  test_optional_deps.py  test_public_imports.py  test_run_optimization.py  test_sampling.py  test_space.py
uml/: AbstractModel.gv  geometry.gv  material.gv  rve.gv
(+1599 files in other folders)
