[metadata]
name = f3dasm
version = file: VERSION
author = Martin van der Schelling
author_email = M.P.vanderSchelling@tudelft.nl
description = Stub for own interpretation of F3DASM code.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = keyword_1, keyword_2
url = https://github.com/bessagroup/F3DASM/tree/versionmartin
license = BSD 3-Clause
license_files = file: LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
	
[options]
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    SALib
    hypothesis
    GPyOpt
    GPy
    autograd
    numdifftools
    tensorflow
    pathos
    pytest
    hypothesis
	
[options.packages.find]
where=src


[tool:pytest]
minversion = 6.0
testpaths =
    tests
markers =
    smoke

[flake8]
ignore = W503, E501, F403, F841, F401
exclude =
	.tox,
    __pycache__,
    dist,
	*.egg,
	docs,
	notebooks,
	tests
	.git
	f3dasm/simulation/abaqus/ExampleFlower
select = E,W,F
max-line-length = 119
extend-ignore = E203