[metadata]
name = f3dasm
version = attr: f3dasm.__version__
author = Martin van der Schelling
author_email = M.P.vanderSchelling@tudelft.nl
description = Stub for own interpretation of F3DASM code.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = keyword_1, keyword_2
url = https://github.com/bessagroup/F3DASM/tree/versionmartin
license = BSD 3-Clause
license_files = file: LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
	
[options]
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >=3.7
install_requires = file: requirements.txt

[options.packages.find]
where=src

[tool:pytest]
pythonpath = . src
addopts = --cov=f3dasm --cov-fail-under=70.00
minversion = 6.0
testpaths =
    tests
markers =
    smoke
    requires_dependency(name): mark the test as it requires a certain dependency