[metadata]
name = f3dasm
version = file: VERSION
description = f3dasm - Framework for Data-driven development and Analysis of Structures and Materials
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bessagroup/f3dasm
project_urls =
    Documentation = https://bessagroup.github.io/f3dasm/
    Wiki = https://github.com/bessagroup/f3dasm/wiki
author = Martin van der Schelling
author_email = M.P.vanderSchelling@tudelft.nl
license = BSD
keywords = data-driven materials framework, machine learning
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
where = src
exclude =
    docs
    tests
